tests/snapshots/custom_menu/fmSyntaxColorizer/[Senden] - ID 33.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Senden]" id="33">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">8BC8C2EC-E5FA-4240-BA72-FDD887D7DFA9</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Senden" value="200"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
