tests/snapshots/custom_menu/fmSyntaxColorizer/[Stil] - ID 28.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Stil]" id="28">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">39843464-BA10-44A5-AF88-FC44CE30C4FC</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Stil" value="21"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
