tests/snapshots/custom_menu/fmSyntaxColorizer/[Textfarbe] - ID 29.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Textfarbe]" id="29">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">5370C4FB-2A14-4E8A-933A-E8FA682AD921</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Textfarbe" value="181"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
