tests/snapshots/custom_menu/fmSyntaxColorizer/[Verwalten] - ID 17.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Verwalten]" id="17">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">795CCEFB-72C5-42F1-A3E3-CD780EB93A95</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Verwalten" value="157"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
